force-app/main/default/objects/Request__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <label>Academic Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>