force-app/main/default/objects/Request__c/fields/Is_Free_Issuance_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Issuance_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Free Issuance Available</label>
    <type>Checkbox</type>
</CustomField>