force-app/main/default/objects/Request__c/fields/Issuance_type__c.field-meta.xml
<CustomField>
    <fullName>Issuance_type__c</fullName>
    <label>Issuance type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>