force-app/main/default/objects/Request__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major</label>
    <referenceTo>Major__c</referenceTo>
    <relationshipLabel>Requests (Major)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>