force-app/main/default/objects/Request__c/fields/Number_of_Free_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Free_Issuance__c</fullName>
    <label>Number of Free Issuance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>