force-app/main/default/objects/Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Header__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost/Broken card</fullName>
            </value>
            <value>
                <fullName>Change information</fullName>
            </value>
            <value>
                <fullName>Studying abroad</fullName>
            </value>
            <value>
                <fullName>University Transfer</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Personal wish</fullName>
            </value>
            <value>
                <fullName>Being forced to drop out of school due to poor academic performance</fullName>
            </value>
            <value>
                <fullName>Being forced to drop out of school due to disciplinary violations</fullName>
            </value>
            <value>
                <fullName>Applying for a level transfer due to poor academics</fullName>
            </value>
            <value>
                <fullName>Being forced to drop out of school for not studying</fullName>
            </value>
            <value>
                <fullName>Dropping out of school due to overdue or dropping out by myself</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>