force-app/main/default/objects/Request__c/fields/Request_Header__c.field-meta.xml
<CustomField>
    <fullName>Request_Header__c</fullName>
    <label>Request Header</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Card Re-issuance</fullName>
            </value>
            <value>
                <fullName>Application for Graduation Recognition</fullName>
            </value>
            <value>
                <fullName>Application for Deferred Graduation</fullName>
            </value>
            <value>
                <fullName>Application for Study Promotion Scholarship</fullName>
            </value>
            <value>
                <fullName>Second Program Registration</fullName>
            </value>
            <value>
                <fullName>Handling the Procedure for University Dropout</fullName>
            </value>
            <value>
                <fullName>Semester Transcript Issuance</fullName>
            </value>
            <value>
                <fullName>Academic Year Transcript Issuance</fullName>
            </value>
            <value>
                <fullName>Academic Record Transcript Issuance</fullName>
            </value>
            <value>
                <fullName>Training Point Transcript Issuance</fullName>
            </value>
            <value>
                <fullName>Written Confirmation for Military Service Postponement</fullName>
            </value>
            <value>
                <fullName>Student Confirmation</fullName>
            </value>
            <value>
                <fullName>Student Loan Confirmation</fullName>
            </value>
            <value>
                <fullName>Password Reset for Office 365 Account</fullName>
            </value>
            <value>
                <fullName>Password Reset for LMS account</fullName>
            </value>
            <value>
                <fullName>Exam Postponement</fullName>
            </value>
            <value>
                <fullName>Additional Exam Registration</fullName>
            </value>
            <value>
                <fullName>Studying Break Request</fullName>
            </value>
            <value>
                <fullName>Study Return Request</fullName>
            </value>
            <value>
                <fullName>Tuition Fee Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Score Review Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>