force-app/main/default/objects/Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Request &amp; Issue Written Confirmation</fullName>
            </value>
            <value>
                <fullName>Support Email, LMS Accounts</fullName>
            </value>
            <value>
                <fullName>Postpone the Exam, Register for Additional Exam</fullName>
            </value>
            <value>
                <fullName>Score Review</fullName>
            </value>
            <value>
                <fullName>Take Studying Break</fullName>
            </value>
            <value>
                <fullName>Return to Study</fullName>
            </value>
            <value>
                <fullName>Defer Paying Tuition Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>