force-app/main/default/objects/Request__c/fields/Second_Program__c.field-meta.xml
<CustomField>
    <fullName>Second_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Program</label>
    <referenceTo>Major__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>