force-app/main/default/objects/Request__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Unit Cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>