force-app/main/default/objects/Request__c/recordTypes/Request_Status_Path.recordType-meta.xml
<RecordType>
    <fullName>Request_Status_Path</fullName>
    <active>true</active>
    <label>Request Status Path</label>
</RecordType>